Fix Windows installer build issues - Fix PowerShell directory creation in GitHub Actions - Improve error handling in build_installers.py - Ensure directories exist before creating files - Add better path validation for installer scripts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,8 +67,8 @@ jobs:
     - name: Build Windows installer
       if: matrix.os == 'windows-latest'
       run: |
-        # Create necessary directories
-        mkdir -p installers/windows
+        # Ensure directories exist (PowerShell compatible)
+        if (-not (Test-Path "installers\windows")) { New-Item -ItemType Directory -Path "installers\windows" -Force }
         python build_installers.py
 
     - name: Build macOS installer
